[project]
name = "langchain-ollama-others-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=7.3.0",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "numexpr>=2.10.2",
    "openai>=1.61.0",
]
